@@ -1,4 +1,4 @@
-!
+
 ! Copyright (C) 2001-2006 Quantum-ESPRESSO group
 ! This file is distributed under the terms of the
 ! GNU General Public License. See the file `License'
@@ -21,7 +21,7 @@
 
 #if defined __FFTMKL8
 
-####include "mkl_dfti.f90"
+#include "mkl_dfti.f90"
 
 #if undef __FFTMKL8
      !
