@@ -1,3 +1,4 @@
+<<<<<<< qexml.f90
 !
 ! Copyright (C) 2006 WanT Group
 ! This file is distributed under the terms of the
@@ -183,34 +184,34 @@ CONTAINS
 !-------------------------------------------
 !
     !------------------------------------------------------------------------
-    FUNCTION int_to_char( int )
+    FUNCTION int_to_char( i )
       !------------------------------------------------------------------------
       !
       IMPLICIT NONE
       !
-      INTEGER, INTENT(IN) :: int
+      INTEGER, INTENT(IN) :: i
       CHARACTER (LEN=6)   :: int_to_char
       !
       !
-      IF ( int < 10 ) THEN
+      IF ( i < 10 ) THEN
          !
-         WRITE( UNIT = int_to_char , FMT = "(I1)" ) int
+         WRITE( UNIT = int_to_char , FMT = "(I1)" ) i
          !
       ELSE IF ( int < 100 ) THEN
          !
-         WRITE( UNIT = int_to_char , FMT = "(I2)" ) int
+         WRITE( UNIT = int_to_char , FMT = "(I2)" ) i
          !
-       ELSE IF ( int < 1000 ) THEN
+       ELSE IF ( i < 1000 ) THEN
          !
-         WRITE( UNIT = int_to_char , FMT = "(I3)" ) int
+         WRITE( UNIT = int_to_char , FMT = "(I3)" ) i
          !
-       ELSE IF ( int < 10000 ) THEN
+       ELSE IF ( i < 10000 ) THEN
          !
-         WRITE( UNIT = int_to_char , FMT = "(I4)" ) int
+         WRITE( UNIT = int_to_char , FMT = "(I4)" ) i
          !
        ELSE
          !
-       WRITE( UNIT = int_to_char , FMT = "(I5)" ) int
+       WRITE( UNIT = int_to_char , FMT = "(I5)" ) i
        !
       END IF
       !
@@ -2609,3 +2610,4 @@ CONTAINS
     !
     !
 END MODULE qexml_module
+
